--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   cloud_firestore: ^6.1.1
   uuid: ^4.5.2
   fl_chart: 1.1.1
+  
+  # Fonts (for emoji support on web)
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
