--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   
   # Fonts (for emoji support on web)
   google_fonts: ^6.2.1
+  emoji_picker_flutter: ^4.4.0
 
 dev_dependencies:
   flutter_test:
