--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   # Fonts (for emoji support on web)
   google_fonts: ^6.2.1
   emoji_picker_flutter: ^4.4.0
+  confetti: ^0.8.0
 
 dev_dependencies:
   flutter_test:
